Fix search suggestions not showing
Differential Revision: https://phabricator.services.mozilla.com/D117713

--- a/browser/themes/shared/urlbar/dynamicResults.inc.css
+++ b/browser/themes/shared/urlbar/dynamicResults.inc.css
@@ -162,6 +162,10 @@
   font-size: small;
 }
 
+.urlbarView-row[dynamicType=quickActions] > .urlbarView-row-inner > .urlbarView-no-wrap {
+  padding-inline-end: 5px;
+}
+
 .urlbarView-row[dynamicType=quickActions] > .urlbarView-row-inner[selected] {
   background-color: var(--autocomplete-popup-highlight-background);
   color: var(--autocomplete-popup-highlight-color);
